kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: books-app-namespace
  labels:
    name: books-app-namespace
