kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-app-deployment
  namespace: books-app-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: books-application
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: books-application
    spec:
      containers:
        - name: books-application
          image: jtrpkovska/books-application:latest
          ports:
            - containerPort: 8080
