kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-app-service
  namespace: books-app-namespace
spec:
  selector:
    app: books-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
